# QuakeBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: AgentObservationPanel.tsx  CommaInput.tsx  CurrentActionPanel.tsx  CustomLayoutBuilder.tsx  EventTimeline.tsx  FloorSelector.tsx  Legend.tsx  MissionAccountingPanel.tsx  MissionLog.tsx  PixelFloorMap.tsx  ReplayControls.tsx  RobotStatusPanel.tsx  ScenarioConfigPanel.tsx  SurvivorCards.tsx
frontend/src/styles/: layout.css  pixel.css
quakebot/: __init__.py  accounting.py  action_handlers.py  actions.py  agents.py  app.py  demo.py  env.py  env_helpers.py  memory.py  models.py  navigation.py  observations.py  prompts.py  renderer.py  replay.py  scenario.py  scenario_builder.py  tasks.py  validation.py  visual_layouts.py
quakebot/api/: __init__.py  server.py
quakebot/core/: __init__.py  events.py
quakebot/layouts/default/: building.json  visual.json
simulation_recordings/: demo_location-unknown_gemma4:31b.json
tests/: test_actions.py  test_api.py  test_app_agents.py  test_approximate_mode.py  test_custom_scenario.py  test_dynamic_events.py  test_env.py  test_replay.py  test_rescue_flow.py  test_scenario.py
