[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quakebot"
version = "0.1.0"
description = "LLM-agent harness in a symbolic disaster-response virtual world"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "QuakeBot" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
