[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quakebot"
version = "0.1.0"
description = "LLM-agent harness in a symbolic disaster-response virtual world"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "QuakeBot" }]
dependencies = ["fastapi>=0.111", "uvicorn>=0.30"]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8"]

[tool.setuptools.package-data]
quakebot = ["layouts/default/*.json"]

[tool.setuptools.packages.find]
include = ["quakebot*"]
exclude = ["frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
